# fastspecfit

./: .coveragerc  .gitignore  .readthedocs.yml  AUTHORS.rst  CLAUDE.md  LICENSE.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-testdata.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: .#python-package.yml  publish.yml  python-package.yml
boneyard/: VelocityDispersion.ipynb  emlines.py  fastspecfit-html  fastspecfit-profile  running-fastspecfit  sandbox.py  spectra-for-samyak  stackit
doc/: Makefile  acknowledgments.rst  algorithms.rst  api.rst  changes.rst  conf.py  data.rst  fastphot.rst  fastspec.rst  fuji.rst  fujilupe.rst  guadalupe.rst  index.rst  install.rst  iron-fastphot.rst  iron.rst  loa-fastphot.rst  loa.rst  photfit.rst  rtd-requirements.txt  running.rst  specfit.rst  tutorials.rst  vacs.rst
doc/nb/: desi-galspecfit.ipynb  everest.ipynb  nebular-lines.ipynb  nyxgalaxy-analysis.ipynb  tutorial-fastspec-and-observed-spectra.ipynb  tutorial-fastspecfit.ipynb  tutorial-kcorrections.ipynb  tutorial-upload-catalog.ipynb  tutorial-vmax.ipynb
doc/technote/: Makefile  continuum-modeling.tex  emline-model.tex
docker/: Containerfile  Containerfile-base  Containerfile-test  Dockerfile  README  README.md  build.sh  test-mpi-fastspecfit  test-mpipool
etc/: README.sample  README.specprod  desigal.module  fastspecfit-env.sh  fastspecfit-sample.sh  fastspecfit-sample.slurm  fastspecfit.module  fastspecfit.sh  jupyter-kernel-docker.json  jupyter-kernel-latest.json  jupyter-kernel.json
podman/: Containerfile  Containerfile-base  Containerfile-mkl  README.md  fakeintel.c
py/desigal/: __init__.py  igalfit.py  main.py  nyxgalaxy.py
py/desigal/data/: igalfit_lines.ecsv
py/desigal/scripts/: nyxgalaxy.py  nyxgalaxy_qa.py
py/desigal/test/: __init__.py  desigal_test_suite.py
py/fastspecfit/: #io.py#  __init__.py  _version.py  continuum.py  cosmo.py  emlines.py  fastspecfit.py  fitting.py  fnnls.py  html.py  igm.py  inoue14.py  io.py  jax.py  linemasker.py  linetable.py  logger.py  mpi.py  photometry.py  qa.py  resolution.py  sandbox.py  singlecopy.py  specfit.py  templates.py  util.py
py/fastspecfit/data/: emline-constraints.yaml  emlines.ecsv  legacysurvey-dr10.yaml  legacysurvey-dr9.yaml  stacked-phot.yaml
py/fastspecfit/emline_fit/: __init__.py  emline_objective.py  emlines_objective.py  interface.py  jacobian.py  model.py  params_mapping.py  sparse_rep.py  utils.py
py/fastspecfit/scripts/: #fastspec.py#  .#fastspec.py  fastphot.py  fastspec.py
py/fastspecfit/templates/: qa.py  sample.py  stack.py  templates.py
py/fastspecfit/test/: __init__.py  build_test_dustmaps.py  build_test_spectra.py  build_test_stack.py  build_test_templates.py  conftest.py  test_continuum.py  test_cosmo.py  test_emline_constraints.py  test_emline_fit.py  test_emlines.py  test_fastspecfit.py  test_igm.py  test_io.py  test_linemasker.py  test_linetable.py  test_main.py  test_photometry.py  test_resolution.py  test_templates.py  test_top_level.py  test_util.py  test_version.py
py/fastspecfit/test/data/: SFD_dust_4096_ngp.fits  SFD_dust_4096_sgp.fits  SSP_Padova_CKC14z_Kroupa_Z0.0190.fits  coadd-4-80613-thru20210324.fits  coadd-special-dark-27247.fits  emlines.ecsv  redrock-4-80613-thru20210324.fits  redrock-special-dark-27247.fits  stack-LRG.fits  suprime-photinfo.fits  suprime-photinfo.yaml  tiles-iron.csv
py/fastspecfit/test/data/north/tractor/105/: tractor-1054p567.fits
py/fastspecfit/webapp/: README  load.py  manage.py  nginx.conf  settings.py  urls.py  uwsgi.ini  wsgi.py
py/fastspecfit/webapp/fastmodel/: app.py  filters.py  models.py  views.py
py/fastspecfit/webapp/fastmodel/templatetags/: my_templatetag.py
py/fastspecfit/webapp/sample/: app.py  filters.py  models.py  views.py
py/fastspecfit/webapp/sample/migrations/: 0001_initial.py
py/fastspecfit/webapp/sample/templatetags/: my_templatetag.py
py/fastspecfit/webapp/spin-docker/: Dockerfile  README  entry.sh
py/fastspecfit/webapp/templates/: base.html  explore.html  group.html  sample.html  target.html
sandbox/: emlines.ecsv  find-nans  nnls.py  running-fastspecfit  sandbox.py  spectra-for-dan  spectra-for-samyak
sandbox/templates/: sample.py
