[project]
name = "fastspecfit"
version = "3.1.1"
authors = [
    {name="John Moustakas", email="jmoustakas@siena.edu"},
]
description = "Fast spectrophotometric modeling of DESI data."
readme = {file="README.rst", content-type="text/x-rst"}
license = {text="BSD 3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: System :: Software Distribution",
]
dependencies = [
    "numpy<2", # desiutil pinned at <2
    "astropy",
    "scipy",
    "healpy",
    "numba",
    "seaborn",
    "matplotlib",
    "fitsio",
    "speclite",
]
requires-python = "<3.13"

[project.optional-dependencies]
test = [
    "pytest"
]
coverage = [
    "pytest-cov",
    "coveralls",
    "coverage",
]
doc = [
    "Sphinx",
    "sphinx-toolbox",
    "sphinx-rtd-theme",
    "sphinxcontrib-napolean",
]

[build-system]
requires = ["setuptools",
            "wheel"
            ]
build-backend = 'setuptools.build_meta'

[project.scripts]
fastspec = "fastspecfit.fastspecfit:fastspec"
fastphot = "fastspecfit.fastspecfit:fastphot"
stackfit = "fastspecfit.fastspecfit:stackfit"
fastqa = "fastspecfit.qa:fastqa"

[tool.setuptools]
include-package-data = true
zip-safe = true
package-dir = {"" = "py"}
script-files = [
    "bin/build-templates",
    "bin/get-cutouts",
    "bin/mpi-fastspecfit"
]

[tool.setuptools.package-data]
fastspecfit = [
    "data/**/*",
    "test/data/**/*",
]

[tool.setuptools.packages.find]
where = ["py"]
exclude = [".github/*"]

[tool.pytest.ini_options]
# capture the nanomaggies units warning from astropy
filterwarnings = [
    "ignore::astropy.units.UnitsWarning"
]

[tool.flake8]
ignore = [
    "E121", "E123", "E126", "E133", "E226", "E241", "E242",
    "E501", "E704", "E731", "E741", "W503", "W504"
]
