[project]
name = "fastspecfit"
dynamic = ["version"]
authors = [
    {name="John Moustakas", email="jmoustakas@siena.edu"},
]
description = "Fast spectrophotometric modeling of DESI data."
readme = {file="README.rst", content-type="text/x-rst"}
license = {text="BSD 3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: System :: Software Distribution",
]
dependencies = [
    "numpy",
    "astropy",
    "scipy",
    "PyYAML",
    "healpy",
    "numba",
    "seaborn",
    "matplotlib",
    "fitsio",
    "speclite",
    "desiutil",
    "desitarget",
    "desispec",
]

[project.optional-dependencies]
test = [
    "pytest",
]
coverage = [
    "pytest-cov",
    "coveralls",
    "coverage",
]
doc = [
    "Sphinx",
    "sphinx-design",
    "sphinx-rtd-theme",
]

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
version_file = "py/fastspecfit/_version.py"
tag_regex = "^(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+.*)$"
local_scheme = "no-local-version"

[project.scripts]
fastspec = "fastspecfit.fastspecfit:fastspec"
fastphot = "fastspecfit.fastspecfit:fastphot"
fastqso = "fastspecfit.fastspecfit:fastqso"
stackfit = "fastspecfit.fastspecfit:stackfit"
fastqa = "fastspecfit.qa:fastqa"

[tool.setuptools]
include-package-data = true
zip-safe = true
package-dir = {"" = "py"}
script-files = [
    "bin/build-templates",
    "bin/generate-fast-slurm",
    "bin/get-cutouts",
    "bin/mpi-fastspecfit",
    "bin/parse-fast-logs",
    "bin/profile-fastspec"
]

[tool.setuptools.package-data]
fastspecfit = [
    "data/**/*",
    "test/data/**/*",
]

[tool.setuptools.packages.find]
where = ["py"]
exclude = [".github/*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::astropy.units.UnitsWarning"
]

[tool.flake8]
ignore = [
    "E121", "E123", "E126", "E133", "E226", "E241", "E242",
    "E501", "E704", "E731", "E741", "W503", "W504"
]
