[metadata]
name = fastspecfit
version = attr: fastspecfit.__version__
author = John Moustakas & the DESI Collaboration
author_email = jmoustakas@siena.edu
license = BSD 3-Clause License
license_files = LICENSE.rst
url = https://github.com/desihub/fastspecfit
description = Fast fitting of DESI spectroscopy and photometry.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = desihub/fastspecfit
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: System :: Software Distribution
    Topic :: Utilities

[options]
zip_safe = True
package_dir =
    =py
packages = find:
include_package_data = True
python_requires = >=3.9
# setup_requires = setuptools_scm
install_requires =
    numpy<2.0
    astropy>=5.0
    scipy
    healpy
    numba
    seaborn
    matplotlib
    fitsio
    speclite>=0.20
    git+https://github.com/desihub/desimodel.git@0.19.2
    git+https://github.com/desihub/desitarget.git@2.8.0
    git+https://github.com/desihub/desispec.git@0.67.0

[options.extras_require]
test =
    pytest
coverage =
    pytest-cov
    coveralls
doc =
    Sphinx
    sphinx-toolbox
    sphinx-rtd-theme
    sphinxcontrib-napolean

[options.package_data]
fastspecfit = data/*
fastspecfit.test = data/*

[options.packages.find]
where = py
exclude = .github/*

[coverage:run]
relative_files = True
source =
    py/fastspecfit
omit =
    py/fastspecfit/_version.py
    py/fastspecfit/test/*
    */fastspecfit/_version.py
    */fastspecfit/test/*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[pycodestyle]
# See https://pycodestyle.readthedocs.io/en/latest/intro.html#configuration
# for details of these configuration options.
#
# These are normally ignored by default:
# ignore = E121, E123, E126, E133, E226, E241, E242, E704, W503, W504
#
# In addition to the default set we add:
# - E501: line too long (82 > 79 characters)
# - E731: do not assign a lambda expression, use a def
# - E741: do not use variables named 'l', 'O', or 'I' -- because, for example,
#   'l' might refer to Galactic longitude.
ignore = E121, E123, E126, E133, E226, E241, E242, E501, E704, E731, E741, W503, W504
